workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_remove_path_parameter_command__new_events.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: new_events
---
[
    PathParameterRemoved(
        PathParameterRemoved {
            path_id: "path_2",
            name: "",
            event_context: None,
        },
    ),
]
