workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_remove_path_parameter_command__path_with_children_result.snap
---
source: workspaces/optic-engine/src/commands/endpoint.rs
expression: path_with_children_result.unwrap_err()
---
Validation(
    "Command failed validation: path parameter must be unused to be removed, \"RemovePathParameter(RemovePathParameter { path_id: \\\"path_1\\\" })\"",
)
