workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_remove_path_parameter_command__unexisting_path_result.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: unexisting_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path component must exist to remove path parameter, \"RemovePathParameter(RemovePathParameter { path_id: \\\"not-a-path-id\\\" })\"",
)
